k8s/study-k8s/kube/tut/ingress/3rd-src/deploy-echo.yaml
kind: Pod
#https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-ingress-guide-nginx-example.html
apiVersion: v1
metadata:
  name: apple-app
  namespace: ingress-nginx
  labels:
    app: apple
spec:
  containers:
    - name: apple-app
      image: hashicorp/http-echo
      args:
        - "-text=apple"

---

kind: Service
apiVersion: v1
metadata:
  name: apple-service
  namespace: ingress-nginx
spec:
  selector:
    app: apple
  ports:
    - port: 5678 # Default port for image


---


kind: Pod
#https://matthewpalmer.net/kubernetes-app-developer/articles/kubernetes-ingress-guide-nginx-example.html
apiVersion: v1
metadata:
  name: banana-app
  namespace: ingress-nginx
  labels:
    app: banana
spec:
  containers:
    - name: banana-app
      image: hashicorp/http-echo
      args:
        - "-text=banana"

---

kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: ingress-nginx
spec:
  selector:
    app: banana
  ports:
    - port: 5678 # Default port for image
