k8s/study-k8s/kube/tut/ingress/3rd-src/deploy-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ingress-nginx
  labels:
    run: web-ingress
  name: web-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      run: web-ingress
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: web-ingress
    spec:
      containers:
      - image: nginx
        name: web-ingress
        #ports:
        #- containerPort: 8089

---

apiVersion: v1
kind: Service
metadata:
  name: web-ingress
  namespace: ingress-nginx
spec:
  selector:
    app: web-ingress
  ports:
  - protocol: TCP
    port: 8089
    #targetPort: 8089
  type: ClusterIP
